--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://traveloca:traveloca@cluster0.vibphao.mongodb.net/traveloca"
-NEXT_AUTH_SECRET="traveloca"
-GITHUB_ID=10cbf74f1a04f2c67054
-GITHUB_SECRET=0bd04d11dd9d4eff0b920b2b3081c8cd192579bb
-GOOGLE_ID=869956434454-g4useo1if8dpct70e90dhd78bd7dh1ig.apps.googleusercontent.com
-GOOGLE_SECRET=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
+DATABASE_URL=
+NEXT_AUTH_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=
